<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.062">

        <Button
            android:id="@+id/btnSelfTest"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorButton"
            android:onClick="openSelfTest"
            android:text="@string/content_main_btn_self_test"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnShowStatus"
            android:onClick="openShowStatus"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:background="@color/colorButton"
            android:layout_marginBottom="5dp"
            android:text="@string/content_main_btn_show_status" />

        <Button
            android:id="@+id/btnChallengeStatus"
            android:onClick="openChallengeStatus"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:background="@color/colorButton"
            android:text="@string/content_main_btn_challenge_status" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>